Youtube downloader working!

--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@preact/signals-react": "^2.0.0",
+    "fluent-ffmpeg": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
