--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "tmp": "^0.2.1",
     "ytdl-core": "^4.11.5"
   }
 }
